# rayscene

./: .clang-format  CMakeLists.txt  CMakeOptions.cmake  LICENSE  rayscene.pc.in
Include/Stager/: Actor.hh  Costume.hh  Exception.hh  Stage.hh  Theatre.hh
Include/Stager/Exceptions/: DuplicateStageException.hh  NonExistentStageException.hh
Source/: Actor.cc  Costume.cc  Stage.cc  Theatre.cc
Test/: Background1.hh  CMakeLists.txt  MyStage1.hh  MyStage2.hh  main.cpp
cmake/: InstallConfigurations.cmake  PopulateConfigVariablesLocally.cmake  rayscene-config.cmake
examples/: CMakeLists.txt  basic.c
src/: CMakeLists.txt  ray_entity_manager.c  rayentity.c  rayscene.h
